# backstage-plugin-toolbox

./: .gitignore  .prettierignore  .versionrc.json  .yarnrc.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app-config.yaml  mkdocs.yml  package.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01_bug.yaml  02_suggestion.yaml
.github/workflows/: ci.yaml  release.yaml
docs/: index.md
plugins/devtools/: README.md  package.json
plugins/devtools/dev/: index.tsx
plugins/devtools/src/: index.ts  plugin.test.ts  plugin.ts  routes.ts
plugins/toolbox/: .eslintignore  README.md  config.d.ts  package.json
plugins/toolbox-backend/: README.md  config.d.ts  package.json
plugins/toolbox-backend-module-whois/: README.md  package.json
plugins/toolbox-backend-module-whois/src/: handler.ts  index.ts  module.ts
plugins/toolbox-backend/dev/: index.ts
plugins/toolbox-backend/src/: index.ts  plugin.ts
plugins/toolbox-node/: README.md  package.json
plugins/toolbox-react/: README.md  package.json
plugins/toolbox/src/components/Misc/ImageOptimizer/: Cargo.toml  ComponentCompressTab.tsx  ComponentPreviewCard.tsx  ComponentResizeTab.tsx  ComponentStatsCard.tsx  ImageOptimizer.tsx  StatsCard.tsx
plugins/toolbox/src/components/Misc/ImageOptimizer/rustCode/: Cargo.toml
plugins/toolbox/src/components/Misc/ImageOptimizer/rustCode/pkg/: package.json  pixo.d.ts  pixo.js  pixo_bg.wasm  pixo_bg.wasm.d.ts
plugins/toolbox/src/components/Misc/ImageOptimizer/rustCode/src/: lib.rs
plugins/toolbox/src/components/Misc/ImageOptimizer/src/: lib.rs
(+168 files in other folders)
