[package]
name = "pixo"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
pixo = "0.4.1"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
image = { version = "0.24", default-features = false, features = ["jpeg", "png"] }
web-sys = { version = "0.3", features = ["console"] }

[build]
target = "wasm32-unknown-unknown"